@@ -20,6 +20,7 @@ Changelog
  * Fix: Prevent empty redirect by overnormalisation (Franklin Kingma, Ludolf Takens)
  * Fix: "Remove link" button in rich text editor didn't trigger "edit" event, leading to the change to sometimes not be persisted (Matt Westcott)
  * Fix: `RichText` values can now be correctly evaluated as booleans (Mike Dingjan, Bertrand Bordage)
+ * Fix: wagtailforms no longer assumes an .html extension when determining the landing page template filename (kakulukia)
 
 
 1.5.2 (08.06.2016)
